# llm-service

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: dependencies.py  main.py
app/application/: generation_service.py
app/domain/: exceptions.py  interfaces.py  schemas.py
app/infrastructure/: config.py  llm_registry.py
app/infrastructure/providers/: mock.py  openai.py
app/presentation/: router.py
tests/: conftest.py  test_api.py  test_dependencies.py  test_factory.py  test_service.py
